[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/Scripts/PickingScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/graf_tony.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/graf_pow1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/splatter_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/splatter_2.png" type="Texture" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 20, 0.1, 20 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.54902, 0.54902, 0.54902, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 20, 0.1, 20 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 10, 20, 0.1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.784314, 0.784314, 0.784314, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.666667, 0.666667, 0.666667, 1 )

[sub_resource type="CubeMesh" id=8]
size = Vector3( 10, 17, 0.1 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.392157, 0.392157, 0.392157, 1 )

[sub_resource type="QuadMesh" id=10]
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=11]
render_priority = 9
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 2 )

[sub_resource type="StreamTexture" id=12]
flags = 23
load_path = "res://.import/graf_zach.png-8ed62471a43cfb252ef06048cad27884.s3tc.stex"

[sub_resource type="SpatialMaterial" id=13]
render_priority = 10
flags_transparent = true
flags_unshaded = true
albedo_texture = SubResource( 12 )

[sub_resource type="SpatialMaterial" id=14]
render_priority = 8
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=15]
size = Vector2( 3, 3 )

[sub_resource type="SpatialMaterial" id=16]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0, 0, 1, 1 )
albedo_texture = ExtResource( 4 )

[sub_resource type="QuadMesh" id=17]
size = Vector2( 4, 4 )

[sub_resource type="SpatialMaterial" id=18]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 1, 0, 1 )
albedo_texture = ExtResource( 5 )

[sub_resource type="QuadMesh" id=19]
size = Vector2( 1.25, 1.25 )

[sub_resource type="SpatialMaterial" id=20]
albedo_texture = ExtResource( 6 )

[sub_resource type="CubeMesh" id=21]
size = Vector3( 10, 10, 0.1 )

[sub_resource type="SpatialMaterial" id=22]
albedo_color = Color( 1, 0.654902, 0.654902, 1 )

[node name="PickingScreen" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.977546, 0.00350192, 0.210694, -0.00939055, 0.999593, 0.0269547, -0.210514, -0.028328, 0.97718, 2.22114, 4.11687, 5.86481 )

[node name="Ground" type="Spatial" parent="."]

[node name="Floor" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -1 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Road" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, -1 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="LeftBuilding" type="Spatial" parent="."]
editor/display_folded = true

[node name="Front" type="MeshInstance" parent="LeftBuilding"]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -15, 10, -6 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Side" type="MeshInstance" parent="LeftBuilding"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 10, -1 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="RightBuilding" type="Spatial" parent="."]
editor/display_folded = true

[node name="Back" type="MeshInstance" parent="RightBuilding"]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 9, 7, -6 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="Side" type="MeshInstance" parent="RightBuilding"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 10, -1 )
mesh = SubResource( 5 )
material/0 = SubResource( 7 )

[node name="MainBuilding" type="Spatial" parent="."]

[node name="GrafittiHolder" type="Spatial" parent="MainBuilding"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.44393, -0.301732 )

[node name="Tony" type="MeshInstance" parent="MainBuilding/GrafittiHolder"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, -0.488279, 2.5424, -0.540987 )
mesh = SubResource( 10 )
material/0 = SubResource( 11 )

[node name="Zach" type="MeshInstance" parent="MainBuilding/GrafittiHolder"]
transform = Transform( 1.90665, 0.603894, 0, -0.603894, 1.90665, 0, 0, 0, 1, 2.42836, 0.642338, -0.540987 )
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="Pow" type="MeshInstance" parent="MainBuilding/GrafittiHolder"]
transform = Transform( 1.93185, -0.517638, 0, 0.517638, 1.93185, 0, 0, 0, 1, -2.82515, 0.296151, -0.573359 )
mesh = SubResource( 10 )
material/0 = SubResource( 14 )

[node name="Splat1" type="MeshInstance" parent="MainBuilding/GrafittiHolder"]
transform = Transform( 1.93185, -0.517638, 0, 0.517638, 1.93185, 0, 0, 0, 1, -2.87918, 0.0957496, -0.621439 )
mesh = SubResource( 15 )
material/0 = SubResource( 16 )

[node name="Splat2" type="MeshInstance" parent="MainBuilding/GrafittiHolder"]
transform = Transform( 1.72137, -1.01828, 0, 1.01828, 1.72137, 0, 0, 0, 1, 2.42143, 0.46189, -0.621439 )
mesh = SubResource( 17 )
material/0 = SubResource( 18 )

[node name="CharacterHolder" type="Spatial" parent="MainBuilding"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.669021 )

[node name="Character1" type="MeshInstance" parent="MainBuilding/CharacterHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 4, 0 )
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="Character2" type="MeshInstance" parent="MainBuilding/CharacterHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 4, 0 )
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="Character3" type="MeshInstance" parent="MainBuilding/CharacterHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 4, 0 )
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="Character4" type="MeshInstance" parent="MainBuilding/CharacterHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 4, 0 )
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="Character5" type="MeshInstance" parent="MainBuilding/CharacterHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, 0 )
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="Character6" type="MeshInstance" parent="MainBuilding/CharacterHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, 0 )
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="Character7" type="MeshInstance" parent="MainBuilding/CharacterHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, 0 )
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="Character8" type="MeshInstance" parent="MainBuilding/CharacterHolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2, 0 )
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="BuldingFace" type="MeshInstance" parent="MainBuilding"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -1 )
mesh = SubResource( 21 )
material/0 = SubResource( 22 )

